--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,18 @@
 {
-    "name": "surge/wordpress-plugin",
-    "description": "Esqueleto de um plugin para o wordpress",
-    "type": "project",
-    "authors": [
-        {
-            "name": "SURGE",
-            "email": "geral@surge.pt"
-        }
-    ],
-    "require": {}
+  "name": "surge/wordpress-plugin",
+  "description": "Esqueleto de um plugin para o wordpress",
+  "type": "project",
+  "authors": [
+    {
+      "name": "SURGE",
+      "email": "geral@surge.pt"
+    }
+  ],
+  "minimum-stability": "dev",
+  "require": {},
+  "autoload": {
+    "psr-4": {
+      "Inc\\": "./inc"
+    }
+  }
 }
